force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__Description__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Description__c</fullName>
    <description>Description</description>
    <inlineHelpText>Description</inlineHelpText>
    <label>Description</label>
    <type>TextArea</type>
</CustomField>