force-app/main/default/objects/LLC_BI__Index__mdt/fields/LLC_BI__External_Source__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__External_Source__c</fullName>
    <description>Default Source URL</description>
    <inlineHelpText>Default Source URL</inlineHelpText>
    <label>Default Source URL</label>
    <type>Url</type>
</CustomField>